--- a/BioVitalAge/templates/components/navBar.html
+++ b/BioVitalAge/templates/components/navBar.html
@@ -18,7 +18,7 @@
                 {% if dottore.isSecretary %}
                     Segr. {{ dottore.cognome }}
                 {% elif dottore.user %}
-                    Dottor. {{ dottore.cognome }}
+                    Dottore {{ dottore.cognome }}
                 {% else %}
                     Account Demo
                 {% endif %}
