--- a/BioVitalAge/templates/home_page/homePage.html
+++ b/BioVitalAge/templates/home_page/homePage.html
@@ -12,7 +12,7 @@
   {% csrf_token %}
   <meta name="csrf-token" content="{{ csrf_token }}">
   
-  <title>BioVitalAge® - testpush</title>
+  <title>BioVitalAge®</title>
 
   <!-- Css Import -->
   <link rel="stylesheet" href="{% static 'css/homePage.css' %}" />
