--- a/BioVitalAge/templates/includes/cartellaPaziente.html
+++ b/BioVitalAge/templates/includes/cartellaPaziente.html
@@ -59,10 +59,9 @@
                 <div class="tools-container-left-side" style="display: flex; justify-content: center; align-items: center; width: 28rem">
 
                     <div class="tools-menu-trace">   
-                
-                        <button title="Prescrione esami"><img src="{% static 'image/Esame_grey.png' %}" alt=""></button> <!-- esami -->
-                        <button title="Prescrione farmaci"><img src="{% static 'image/Farmaci.png' %}" alt=""></button> <!-- farmaci -->
-                        <button title="Prescrione libera"><img src="{% static 'image/Foglio.png' %}" alt=""></button> <!-- libera -->
+                        <button title="Anamnesi"><img src="{% static 'image/Anamnesi_gray.png' %}" alt=""></button> 
+                        <button title="Esame Obbiettivo"><img src="{% static 'image/EsameObbiettivo.png' %}" alt=""></button> 
+                        <button title="Problemi"><img src="{% static 'image/Problemi.png' %}" alt=""></button> 
                     </div>
 
                     <div class="main-menu-trace">
@@ -383,7 +382,110 @@
             </div>
 
             <div class="flex-container">
-                <div class="container-list" style="width: 65%;">
+
+                <div class="container-tabella" style="width: 50%;">
+
+                    <div class="container-header-diario">
+                        <h3>Diario Clinico</h3>
+                        <div class="header-container">
+                            <button class="button active">Diario</button>
+                            <button class="button">Farmaci</button>
+                            <button class="button">Accertamenti</button>
+                            <button class="button">Certificati</button>
+                        </div>
+                    </div>
+                       
+                    <div class="container-content">
+                        <div class="header-table">
+                            <div class="header-cella">
+                                <p>Data</p>
+                            </div>
+                            <div class="header-cella">
+                                <p>Descrizione</p>
+                            </div>
+                            <div class="header-cella">
+                                <p>Diagnosi</p>
+                            </div>
+                            <div class="header-cella">
+                                <p>Nota</p>
+                            </div>
+                        </div>
+
+                        <div class="container-table">
+
+                            <div class="row-table">
+                                <div class="row-cella">
+                                    <p>02/07/2025</p>
+                                </div>
+                                <div class="row-cella">
+                                    <p>Xanax</p>
+                                </div>
+                                <div class="row-cella">
+                                    <p>depressione</p>
+                                </div>
+                                <div class="row-cella">
+                                    <p>nota testuale</p>
+                                </div>
+                            </div>
+
+                            <div class="row-table">
+                                <div class="row-cella">
+                                    <p>02/07/2025</p>
+                                </div>
+                                <div class="row-cella">
+                                    <p>emocromo e urino cultura</p>
+                                </div>
+                                <div class="row-cella">
+                                    <p>infezione</p>
+                                </div>
+                                <div class="row-cella">
+                                    <p>nota testuale</p>
+                                </div>
+                            </div>
+
+                            <div class="row-table">
+                                <div class="row-cella">
+                                    <p>02/07/2025</p>
+                                </div>
+                                <div class="row-cella">
+                                    <p>buona salute</p>
+                                </div>
+                                <div class="row-cella">
+                                    <p>costituzione</p>
+                                </div>
+                                <div class="row-cella">
+                                    <p>nota testuale</p>
+                                </div>
+                            </div>                          
+                        </div>
+                        
+                        <div class="pagination_tabella">
+                        
+                            {% if storico_page.has_previous %}
+                            <a class="previous" href="?page={{ storico_page.previous_page_number }}">Previous</a>
+                            {% else %}
+                            <span class="previous disabled">Previous</span>
+                            {% endif %}
+                    
+                            {% for num in storico_page.paginator.page_range %}
+                            {% if storico_page.number == num %}
+                            <span class="current">{{ num }}</span>
+                            {% else %}
+                            <a href="?page={{ num }}">{{ num }}</a>
+                            {% endif %}
+                            {% endfor %}
+                    
+                            {% if storico_page.has_next %}
+                            <a class="next" href="?page={{ storico_page.next_page_number }}">Next</a>
+                            {% else %}
+                            <span class="next disabled">Next</span>
+                            {% endif %}
+                    
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container-list" style="width: 30%;">
                     <h3>Fattori di Rischio Prevenzione</h3>
                     <div class="container-test">
 
@@ -417,7 +519,8 @@
                     </div>
                 
                 </div>
-                <div class="container-list" style="width: 35%">
+
+                <div class="container-list" style="width: 20%">
                     <h3>Problemi</h3>
                     <div class="scrollable-content" style="width: 100%;">
                         <p style="text-align: center; border-bottom: none; margin-top: 2rem;">Nessun Problema riscontrato</p>
@@ -426,152 +529,8 @@
             </div>
 
             <!-- TABELLA DIARIO CLINICO -->
-            <div class="container-tabella">
-                <div class="container-header-diario">
-                    <h3>Diario Clinico</h3>
-                    <div class="header-container">
-                        <button class="button active">Diario</button>
-                        <button class="button">Farmaci</button>
-                        <button class="button">Accertamenti</button>
-                        <button class="button">Certificati</button>
-                    </div>
-                </div>
-                
-              
-                <div class="container-content">
-                    <div class="header-table">
-                        <div class="header-cella">
-                            <p>Data</p>
-                        </div>
-                        <div class="header-cella">
-                            <p>Descrizione</p>
-                        </div>
-                        <div class="header-cella">
-                            <p>Diagnosi</p>
-                        </div>
-                        <div class="header-cella">
-                            <p>Nota</p>
-                        </div>
-                    </div>
 
-                    <div class="container-table">
-
-                        <div class="row-table">
-                            <div class="row-cella">
-                                <p>02/07/2025</p>
-                            </div>
-                            <div class="row-cella">
-                                <p>Xanax</p>
-                            </div>
-                            <div class="row-cella">
-                                <p>depressione</p>
-                            </div>
-                            <div class="row-cella">
-                                <p>nota testuale</p>
-                            </div>
-                        </div>
-
-                        <div class="row-table">
-                            <div class="row-cella">
-                                <p>02/07/2025</p>
-                            </div>
-                            <div class="row-cella">
-                                <p>emocromo e urino cultura</p>
-                            </div>
-                            <div class="row-cella">
-                                <p>infezione</p>
-                            </div>
-                            <div class="row-cella">
-                                <p>nota testuale</p>
-                            </div>
-                        </div>
-
-                        <div class="row-table">
-                            <div class="row-cella">
-                                <p>02/07/2025</p>
-                            </div>
-                            <div class="row-cella">
-                                <p>buona salute</p>
-                            </div>
-                            <div class="row-cella">
-                                <p>costituzione</p>
-                            </div>
-                            <div class="row-cella">
-                                <p>nota testuale</p>
-                            </div>
-                        </div>
-
-                        <div class="row-table">
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                        </div>
-
-                        <div class="row-table">
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                        </div>
-
-                        <div class="row-table">
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                            <div class="row-cella">
-                                <p></p>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <div class="pagination_tabella">
-                      
-                        {% if storico_page.has_previous %}
-                        <a class="previous" href="?page={{ storico_page.previous_page_number }}">Previous</a>
-                        {% else %}
-                        <span class="previous disabled">Previous</span>
-                        {% endif %}
-                
-                        {% for num in storico_page.paginator.page_range %}
-                        {% if storico_page.number == num %}
-                        <span class="current">{{ num }}</span>
-                        {% else %}
-                        <a href="?page={{ num }}">{{ num }}</a>
-                        {% endif %}
-                        {% endfor %}
-                
-                        {% if storico_page.has_next %}
-                        <a class="next" href="?page={{ storico_page.next_page_number }}">Next</a>
-                        {% else %}
-                        <span class="next disabled">Next</span>
-                        {% endif %}
-                
-                    </div>
-                </div>
-            </div>
+            
 
             <!-- CONTAINER STORICO -->
             <div class="container-flex-layout">
@@ -646,7 +605,6 @@
 
             </div>
         
-
             <!-- Indicatori di performance -->
             <div class="container-indicatori containerStyle">
 
