--- a/BioVitalAge/templates/cartella_paziente/sezioni_storico/terapie.html
+++ b/BioVitalAge/templates/cartella_paziente/sezioni_storico/terapie.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="{% static 'css/Componenti.css' %}" />
     <link rel="stylesheet" href="{% static 'css/cartella_paziente/sezioni_storico/diagnosi.css' %}" />
     <link rel="stylesheet" href="{% static 'css/cartella_paziente/sezioni_storico/terapie.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/cartella_paziente/prescrizioni/Prescrizioni.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/cartella_paziente/piano_terapeutico/piano_terapeutico.css' %}"/>
 
     <!-- Bootstrap import -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -43,6 +45,7 @@
     </script>
 
     <script src="{% static 'js/cartella_paziente/sezioni_storico/terapie.js' %}" defer type="module"></script>
+    <script src="{% static 'js/cartella_paziente/prescrizioni/Prescrizioni.js' %}" defer type="module"></script>
 
     <!-- Modale -->
     <script>
